--- a/SCEC.API.csproj
+++ b/SCEC.API.csproj
@@ -9,5 +9,9 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
+  </ItemGroup>
+
 
 </Project>
