--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "dbConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=123;Database=scec"
   }
 }
