--- a/SCEC.API.csproj
+++ b/SCEC.API.csproj
@@ -6,11 +6,16 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Models\DTO\" />
+    <Folder Include="Models\Filters\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.32" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
+    <PackageReference Include="SimpleCrypto" Version="0.3.30.26" />
   </ItemGroup>
 
 
